--- a/Youtube-clone.html
+++ b/Youtube-clone.html
@@ -3,80 +3,41 @@
   <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="styles/general.css">   
+    <link rel="stylesheet" href="styles/video.css"> 
+    <link rel="stylesheet" href="styles/header.css">   
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <title>Youtube Clone</title>
-    <style>
-
-      p {
-        font-family: Roboto, Arial;
-        margin-top:0;
-        margin-bottom:0;
-      }
-      .thumbnail {
-        width:100%;
-        
-
-      }
-    .search-bar {
-      font-size: 20px;
-      display:block;
-    }
-
-
-    .video-title{
-      margin-top:0;
-      font-size: 14px;
-      font-weight: 500;
-      line-height: 20px;
-      margin-bottom: 12px;
-
-    }
-    .video-stats,
-    .video-author{
-      font-size: 12px;
-      color:rgb(96, 96, 96)
-
-
-    }
-
-    .video-author{
-      margin-bottom:6px;
-    }
-
-    .video-preview{
-
-    }
-
-
-
-    .profile-pic{
-      width: 40px;
-      border-radius: 50px;
-    }
-
-    .thumbnail-row{
-      margin-bottom: 12px;
-    }
-
-    .video-info-grid{
-      display: grid;
-      grid-template-columns: 50px 1fr;
-    }
-
-    .video-grid{
-      display:grid;
-      grid-template-columns: 1fr 1fr 1fr;
-      column-gap:16px;
-      row-gap:40px;
-
-    }
-  
-
-    </style>
 
   </head>
   <body>
-    <input class="search-bar" type="text" placeholder="Search">
+
+    <div class = "header">
+      <div class = "left-section">
+        <img class = "hamburger-menu" src="icons/hamburger-menu.svg">
+        <img class = "youtube-logo" src="icons/youtube-logo.svg">
+       </div>
+     <div class ="middle-section">
+        <input class="search-bar" type="text" placeholder="Search">
+        <button class="search-button">
+          <img class="search-icon" src="icons/search.svg">
+          </button>
+        <button class = "voice-button">
+          <img class="voice-search-icon" src="icons/voice-search-icon.svg">
+        </button>
+       
+        </div>
+      <div class = "right-section"> 
+        <img class="upload-icon" src="icons/upload.svg">
+        <img class="youtube-apps-icon"src="icons/youtube-apps.svg">
+        <img class="notification-icon"src="icons/notifications.svg">
+        <img class="user-picture" src="chanel-pic/profile-picture.jpg">
+        </div>
+
+
+    </div>
+
+
 
    <div class="video-grid">
     <div class="video-preview"> 
